--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         11111
-        <script src="./script.js"></script>
+        <script src="./typeConversion.js"></script>
     </body>
 </html>
