--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         11111
         <script src="./typeConversion.js"></script>
+        <script src="./loops.js"></script>
     </body>
 </html>
