some array functios, corrected other files

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         11111
         <script src="./typeConversion.js"></script>
         <script src="./loops.js"></script>
+        <script src="./arrayMethods.js"></script>
     </body>
 </html>
