--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     </head>
     <body>
         11111
-        <script src="./typeConversion.js"></script>
-        <script src="./loops.js"></script>
-        <script src="./arrayMethods.js"></script>
+        <script src="./typeConversion/typeConversion.js"></script>
+        <script src="./Loops/loops.js"></script>
+        <script src="./Arrays/arrayMethods.js"></script>
+        <script src="./Objects/objects.js"></script>
     </body>
 </html>
