--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
     </head>
     <body>
-        11111
+        <h1>Training page</h1>
         <script src="./typeConversion/typeConversion.js"></script>
         <script src="./Loops/loops.js"></script>
         <script src="./Arrays/arrayMethods.js"></script>
         <script src="./Objects/objects.js"></script>
+        <script src="./Prototypes/prototypes.js"></script>
     </body>
 </html>
