--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <script src="./Arrays/arrayMethods.js"></script>
         <script src="./Objects/objects.js"></script>
         <script src="./Prototypes/prototypes.js"></script>
+        <script src="./Functions/functions.js"></script>
     </body>
 </html>
