--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <script src="./Objects/objects.js"></script>
         <script src="./Prototypes/prototypes.js"></script>
         <script src="./Functions/functions.js"></script>
+        <script src="./Promises/promises.js"></script>
     </body>
 </html>
